tests/dataset/tpc-ds/compiler/go/q63.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq632882670971/001/main.go:125:2: syntax error: unexpected name at64 after top level declaration
